--- a/app/src/main/res/layout/content_task_manager.xml
+++ b/app/src/main/res/layout/content_task_manager.xml
@@ -8,8 +8,9 @@
     tools:context="com.esdrasmorais.inspetoronline.TaskManagerActivity"
     tools:showIn="@layout/activity_task_manager">
 
-    <fragment
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.SupportMapFragment" />
