--- a/app/src/main/res/layout/content_task_manager.xml
+++ b/app/src/main/res/layout/content_task_manager.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.esdrasmorais.inspetoronline.TaskManagerActivity"
+    tools:context="com.esdrasmorais.inspetoronline.ui.TaskManagerActivity"
     tools:showIn="@layout/activity_task_manager">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
