--- a/app/src/main/res/layout/content_inspection.xml
+++ b/app/src/main/res/layout/content_inspection.xml
@@ -237,17 +237,16 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout_comments"
         android:layout_width="match_parent"
-        android:layout_height="177dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="17dp">
 
         <EditText
             android:id="@+id/edit_text_comments"
             android:layout_width="match_parent"
-            android:layout_height="177dp"
+            android:layout_height="wrap_content"
             android:hint="@string/hint_comments"
-            android:maxLines="10"
-            android:minLines="5"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine" /><!--android:maxLines="10"
+            android:minLines="5"-->
 
     </com.google.android.material.textfield.TextInputLayout>
 
