--- a/app/src/main/res/layout/permanence_dialog.xml
+++ b/app/src/main/res/layout/permanence_dialog.xml
@@ -38,13 +38,12 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--    <com.google.android.material.button.MaterialButton-->
-    <!--        android:id="@+id/button_save"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="@string/text_save"-->
-    <!--        android:layout_marginBottom="77px"-->
-    <!--        android:textAlignment="center"/>-->
-
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/permanence_button_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_save"
+        android:layout_marginBottom="77px"
+        android:textAlignment="center"/>
 
 </LinearLayout>
