--- a/app/src/main/res/layout/content_task_manager.xml
+++ b/app/src/main/res/layout/content_task_manager.xml
@@ -8,11 +8,13 @@
     tools:context="com.esdrasmorais.inspetoronline.ui.TaskManagerActivity"
     tools:showIn="@layout/activity_task_manager">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
+        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment" />
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
