--- a/app/src/main/res/layout/guidance_dialog.xml
+++ b/app/src/main/res/layout/guidance_dialog.xml
@@ -21,7 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/guidance_button_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/text_save"
+            android:layout_marginBottom="77px"
+            android:textAlignment="center"/>
 
+    </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
