--- a/app/src/main/res/layout/guidance_dialog.xml
+++ b/app/src/main/res/layout/guidance_dialog.xml
@@ -21,14 +21,44 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/guidance_button_save"
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_guidance_direction"
+        android:layout_marginBottom="17dp"
+        android:id="@+id/input_layout_guidance_direction">
+
+        <AutoCompleteTextView
+            android:id="@+id/guidance_directions_dropdown"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/text_save"
-            android:layout_marginBottom="77px"
-            android:textAlignment="center"/>
+            android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_guidance_subject"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp">
+
+        <EditText
+            android:id="@+id/edit_text_guidance_subject"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_permanence_note"
+            android:inputType="textMultiLine" /><!--android:maxLines="10" android:minLines="5"-->
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/guidance_button_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_save"
+        android:layout_marginBottom="77px"
+        android:textAlignment="center"/>
 
 </LinearLayout>
