--- a/app/src/main/res/layout/dropdown_prefix_menu_popup_item.xml
+++ b/app/src/main/res/layout/dropdown_prefix_menu_popup_item.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:ellipsize="end"
     android:maxLines="1"
+    android:id="@+id/tvPrefix"
     android:textAppearance="?attr/textAppearanceSubtitle1"
-    android:id="@+id/tvPrefix"/>
+    android:textSize="17sp" android:importantForAccessibility="yes"
+    />
