--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,22 +18,16 @@
         android:id="@+id/input_layout_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
-        android:padding="17px">
+        android:layout_marginBottom="17dp">
 
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
             android:hint="@string/prompt_email"
-            android:inputType="text"
-            android:selectAllOnFocus="true"
-            android:text=""
-            android:padding="7px"
-            android:textSize="17sp"/>
+            android:textSize="17sp"
+            android:inputType="number"
+            android:selectAllOnFocus="true"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,34 +50,28 @@
             android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:padding="7px"
-            android:selectAllOnFocus="true"
             android:text=""
             android:textSize="17sp"
             android:visibility="invisible"/>
-
+<!--    android:selectAllOnFocus="true"-->
 <!--    </com.google.android.material.textfield.TextInputLayout>-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout_verification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
-        android:padding="17px">
+        android:layout_marginBottom="17dp">
 
         <EditText
             android:id="@+id/verification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginEnd="8dp"
             android:hint="@string/prompt_verification"
-            android:imeActionLabel="@string/action_verify"
-            android:imeOptions="actionDone"
             android:inputType="textPassword"
-            android:padding="7px"
-            android:selectAllOnFocus="true"
-            android:textSize="17sp" />
+            android:textSize="17sp"
+            android:selectAllOnFocus="true"/>
+<!--        android:imeActionLabel="@string/action_verify"-->
+<!--        android:imeOptions="actionDone"-->
 
     </com.google.android.material.textfield.TextInputLayout>
 
